Build a JavaScript Front End for a Flask API
