# people.py
@@ -8,39 +8,34 @@ from models import Person, people_schema, person_schema
 
 def read_all():
     people = Person.query.all()
-    return people_schema.dump(people) # people variable contains a list of database items.
+    # people variable contains a list of database items.
+    return people_schema.dump(people)
 
-def read_one(lname):
-    person = Person.query.filter(Person.lname == lname).one_or_none()
+
+def read_one(person_id):
+    person = Person.query.get(person_id)
     if person is not None:
-        return person_schema.dump(person) # person variable contain one item
+        return person_schema.dump(person)  # person variable contain one item
     else:
         abort(
-            404, f"Person with last name {lname} not found"
+            404, f"Person with ID {person_id} not found"
         )
+
 
 def create(person):
-    lname = person.get('lname')
-    existing_person = Person.query.filter(Person.lname == lname).one_or_none()
-    if existing_person is None:
-        new_person = person_schema.load(person, session=db.session)
-        db.session.add(new_person)
-        db.session.commit()
+    new_person = person_schema.load(person, session=db.session)
+    db.session.add(new_person)
+    db.session.commit()
+    return person_schema.dump(new_person), 201
 
-        return person_schema.dump(new_person), 201
-    
-    else:
-        return abort(
-            406,
-            f'Person with last name {lname} already exists'
-        )
 
-def update(lname, person):
-    existing_person = Person.query.filter(Person.lname == lname).one_or_none()
+def update(person_id, person):
+    existing_person = Person.query.get(person_id)
 
     if existing_person is not None:
         update_person = person_schema.load(person, session=db.session)
         existing_person.fname = update_person.fname
+        existing_person.lname = update_person.lname
         db.session.merge(existing_person)
         db.session.commit()
 
@@ -48,24 +43,21 @@ def update(lname, person):
     else:
         abort(
             404,
-            f'Person with last name {lname} not found'
+            f'Person with ID {person_id} not found'
         )
 
-def delete(lname):
-    existing_person = Person.query.filter(Person.lname == lname).one_or_none()
+
+def delete(person_id):
+    existing_person = Person.query.get(person_id)
 
     if existing_person is not None:
         db.session.delete(existing_person)
         db.session.commit()
         return make_response(
-            f'{lname} successfully deleted', 200
+            f'{person_id} successfully deleted', 200
         )
     else:
         abort(
             404,
-            f'Person with last name {lname} not found'
+            f'Person with ID {person_id} not found'
         )
-
-
-
-
